force-app/main/default/objects/Contact/fields/Age1__c.field-meta.xml
<CustomField>
    <fullName>Age1__c</fullName>
    <formula>YEAR( TODAY() ) - YEAR( DATEVALUE( DOB__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>