force-app/main/default/objects/Contact/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>state__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>vellore</fullName>
            </value>
            <value>
                <fullName>chennai</fullName>
            </value>
            <value>
                <fullName>nagapattinam</fullName>
            </value>
            <value>
                <fullName>erode</fullName>
            </value>
            <value>
                <fullName>west godavari</fullName>
            </value>
            <value>
                <fullName>east godavari</fullName>
            </value>
            <value>
                <fullName>ongole</fullName>
            </value>
            <value>
                <fullName>nellore</fullName>
            </value>
            <value>
                <fullName>mysore</fullName>
            </value>
            <value>
                <fullName>bangalore</fullName>
            </value>
            <value>
                <fullName>vijayanagara</fullName>
            </value>
            <value>
                <fullName>belagavi</fullName>
            </value>
            <value>
                <fullName>kannur</fullName>
            </value>
            <value>
                <fullName>tiruvananthapuram</fullName>
            </value>
            <value>
                <fullName>wayanad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>