force-app/main/default/objects/Contact/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <label>DOB</label>
    <type>DateTime</type>
</CustomField>