force-app/main/default/objects/Contact/fields/full_name__c.field-meta.xml
<CustomField>
    <fullName>full_name__c</fullName>
    <description>gives the full name</description>
    <formula>First_name__c   &amp;   last_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>full name</label>
    <type>Text</type>
</CustomField>