force-app/main/default/objects/Contact/fields/high_priority__c.field-meta.xml
<CustomField>
    <fullName>high_priority__c</fullName>
    <description>selects if the priority field is high priority</description>
    <formula>IF(ISPICKVAL( Account.priority_field__c ,&apos;high&apos;) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>high priority</label>
    <type>Checkbox</type>
</CustomField>