force-app/main/default/objects/Contact/fields/isActiveTestC__c.field-meta.xml
<CustomField>
    <fullName>isActiveTestC__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isActiveTestC</label>
    <type>Checkbox</type>
</CustomField>