force-app/main/default/objects/Contact/fields/postal_code__c.field-meta.xml
<CustomField>
    <fullName>postal_code__c</fullName>
    <label>postal code</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>