force-app/main/default/objects/Contact/validationRules/mobile_number_length.validationRule-meta.xml
<ValidationRule>
    <fullName>mobile_number_length</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX( mobile_number__c ,&quot;[a-z,A-Z]{1}[0-9]{5}&quot;))</errorConditionFormula>
    <errorMessage>mobile number should be 10 digits</errorMessage>
</ValidationRule>